# DataLint

./: .gitignore  Cargo.toml  README.md  config.json
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
src/: main.rs
src/benches/: application_bench.rs  mod.rs
src/enums/: color.rs  log_level.rs  mod.rs  separator.rs
src/structs/: anomalie.rs  anomaly.rs  csv_file.rs  inferable_value.rs  json_output.rs  logger.rs  mod.rs  model.rs  perfage_model.rs  tokenizer.rs  utils.rs
src/tests/: csv_tests.rs  mod.rs  model_tests.rs  test.rs  utils_tests.rs
src/utils/: mod.rs  regex.rs  util.rs
