[package]
name = "DataLint"
version = "1.0.0"
edition = "2024"
description = "A Rust executable for linting potential unsafe values in CSV files"
license = "GPL-3"
repository = "https://github.com/Maxime-Cllt/DataLint.git"
categories = ["accessibility", "command-line-interface"]
keywords = ["csv", "data-validation", "pytorch", "machine-learning", "ai"]
authors = ["Maxime-Cllt"]


[dependencies]
tch = "0.20.0"
tokenizers = "0.22.0"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.11.1"
rayon = "1.11.0"
chrono = "0.4.41"
once_cell = "1.21.3"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
criterion = "0.7.0"

[lib]
name = "datalib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.dev]
# Development profile for debug builds
opt-level = 0  # No optimizations, better debugging info
debug = true  # Generate debug info
overflow-checks = true  # Enable overflow checks for safer code
lto = false  # Disable Link Time Optimization for faster compilation
panic = "unwind" # Use unwind strategy to get better backtraces

[profile.test]
# Test profile for optimized builds
incremental = true  # Enable incremental compilation for faster test builds
opt-level = 1  # Optimize for speed, but not as much as release
debug = false  # No debug info in test builds
overflow-checks = true  # Enable overflow checks for safer code
lto = false  # Disable Link Time Optimization for faster compilation

[profile.release]
# Release profile for optimized builds
incremental = false
opt-level = 3  # Optimize for speed
debug = false  # No debug info in release builds
lto = "fat"    # Better than just `true` for performance
codegen-units = 1  # Merge codegen units for better optimization (can increase compile time)
overflow-checks = false  # Disable overflow checks for performance
panic = "abort" # Use unwind strategy to get better backtraces.
strip = "symbols"     # Strip debug symbols to reduce binary size


[[bench]]
name = "benchmark_application"
harness = false
path = "src/benches/application_bench.rs"
